--- a/src/Style/Style.css
+++ b/src/Style/Style.css
@@ -17,11 +17,18 @@
   width:"100%"
 }
 .body-main{
-  background-color: rgb(214, 201, 201);
+  /* background-color: rgb(214, 201, 201); */
   display:"flex";
 }
 .div-2{
 
 padding-top: 2rem;  display: flex;
   justify-content:space-around;
+}
+.search-input{
+  width: 500px;
+  height: 40px; 
+}
+.view-main{
+
 }
